<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.campusmanagementsystemcmsfinal.sampledata.TeacherPortal.ui.home.THomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_thome" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.campusmanagementsystemcmsfinal.sampledata.TeacherPortal.ui.gallery.TGalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_tgallery">

        <action
            android:id="@+id/action_nav_gallery_to_nav_tattendance"
            app:destination="@id/nav_tattendance" />
    </fragment>
    <fragment
        android:id="@+id/nav_tattendance"
        android:name="com.example.campusmanagementsystemcmsfinal.sampledata.TeacherPortal.ui.gallery.TAttendance"
        android:label="@string/attendance"
        tools:layout="@layout/fragment_tattendance" />


    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.campusmanagementsystemcmsfinal.sampledata.TeacherPortal.ui.slideshow.TSlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_tslideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_tresult"
            app:destination="@id/nav_tresult" />
    </fragment>
    <fragment
        android:id="@+id/nav_tresult"
        android:name="com.example.campusmanagementsystemcmsfinal.sampledata.TeacherPortal.ui.slideshow.TResult"
        android:label="result"
        tools:layout="@layout/fragment_tresult" />

</navigation>