<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#a12385"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/splogo"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:importantForAccessibility="no"
        android:contentDescription="logo">
    </ImageView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#F6F0F0"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:weightSum="6">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/login1"
                android:textColor="@color/purple"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="18dp"
                android:text="@string/username"
                android:textColor="@color/purple"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="18dp"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext_bg"
                android:hint="@string/enter_username"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="18dp"
                android:text="@string/password"
                android:textColor="@color/purple"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="18dp"
                android:background="@drawable/rounded_edittext_bg"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple"
                android:textSize="16sp"
                tools:ignore="Autofill" />


            <Button
                android:id="@+id/btnlogin"
                android:layout_width="232dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:backgroundTint="#D1B62195"
                android:elevation="18dp"
                android:hint="@string/login"
                android:textColorHint="@color/white">

            </Button>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="62dp"
        android:gravity="center"
        android:text="@string/superior_university"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold">

    </TextView>

</RelativeLayout>