<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentPortal.ui.home.SHomeFragment"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#D6D3D3"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/academics"
                android:textSize="20sp"
                android:textColor="#4F4E4E"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#908A8A"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >
            </LinearLayout>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/man"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                >
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mohammad_abdur_rehman"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bcsm_f21_190_superior_ed_pk"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textColor="#4F4E4E"
                >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faculty_of_computer_science_and_information_technology_gcl"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textColor="#4F4E4E"
                android:gravity="center"
                android:layout_marginBottom="20dp"

                >
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2"
                android:layout_marginTop="7dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Academic Standing:"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:gravity="center"
                    >
                </TextView>
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Good"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="#4CAF50"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    >
                </TextView>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2"
                android:layout_marginTop="7dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Semester:"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:gravity="center"
                    >
                </TextView>
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5th"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    >
                </TextView>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2"
                android:layout_marginTop="7dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CGPA:"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:gravity="center"
                    >
                </TextView>
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Good"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    >
                </TextView>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2"
                android:layout_marginTop="7dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Completed Cr:"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:gravity="center"
                    >
                </TextView>
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 68/139"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    >
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2"
                android:layout_marginTop="7dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="In Progress:"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:gravity="center"
                    >
                </TextView>
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 18"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    >
                </TextView>
            </LinearLayout>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enrolled_courses"
                android:textSize="20sp"
                android:textColor="#4F4E4E"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#908A8A"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >
            </LinearLayout>


            <ListView
                android:id="@+id/home_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
            </ListView>



        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>